# autogen

./: Makefile.am  Makefile.in  NEWS  VERSION  aclocal.m4  config-h.in  configure  configure.ac
agen5/: Makefile.am  Makefile.in  ag-text.c  ag-text.h  agInit.c  autogen.1  autogen.h  cgi-fsm.h  defParse-fsm.c  defParse-fsm.h  directive.c  expr.h  expr.ini  functions.h  guile-iface.h  invoke-autogen.texi  opts.c  opts.h  proto.h  pseudo-fsm.h
agen5/test/: Makefile.in
autoopts/: Makefile.am  Makefile.in  ao_string_tokenize.3  autoopts-config.1  autoopts-config.in  configFileLoad.3  funcs.def  mk-autoopts-pc.in  optionFileLoad.3  optionFindNextValue.3  optionFindValue.3  optionFree.3  optionGetValue.3  optionLoadLine.3  optionMemberList.3  optionNextValue.3  optionOnlyUsage.3  optionPrintVersion.3  optionPrintVersionAndReturn.3  optionProcess.3  optionRestore.3  optionSaveFile.3  optionSaveState.3  optionUnloadNested.3  optionVersion.3  strequate.3  streqvcmp.3  streqvmap.3  strneqvcmp.3  strtransform.3
autoopts/po/: usage-txt.pot
autoopts/test/: Makefile.in
build-aux/: run-ag.sh
columns/: Makefile.in  opts.c  opts.h
compat/: Makefile.in  strsignal.h
config/: config.rpath  gnulib-cache.m4  gnulib-comp.m4  guile.m4  ltmain.sh
doc/: Makefile.in  agdoc.texi  autogen.info  autogen.info-1  autogen.info-2  invoke-columns.texi  invoke-getdefs.texi  invoke-xml2ag.texi
getdefs/: Makefile.in  proto.h
getdefs/test/: Makefile.in  defs
pkg/: Makefile.am  Makefile.in
pkg/libopts/: stdnoreturn.mk
snprintfv/: Makefile.in
xml2ag/: Makefile.in  fork.c  xmlopts.c
xml2ag/test/: Makefile.in
